--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Machine Learning Quantitative Developer
-subtitle: This is where post random stuff about ML and Coding
+subtitle: This is where I post random stuff about ML and Coding
 ---
